--- a/Lox.csproj
+++ b/Lox.csproj
@@ -43,12 +43,14 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\AstPrinter.cs" />
+    <Compile Include="Source\Enviroment.cs" />
     <Compile Include="Source\Expr.cs" />
     <Compile Include="Source\Interpreter.cs" />
     <Compile Include="Source\Lox.cs" />
     <Compile Include="Source\Parser.cs" />
     <Compile Include="Source\RuntimeError.cs" />
     <Compile Include="Source\Scanner.cs" />
+    <Compile Include="Source\Stmt.cs" />
     <Compile Include="Source\Token.cs" />
     <Compile Include="Source\TokenType.cs" />
   </ItemGroup>
